clientes so podem ver apenas suas movimentacoes
