# src/swagger.json
@@ -435,6 +435,48 @@
 				}
 			}
 		},
+		"/movimentacoes/cliente/{clienteId}": {
+			"get": {
+				"operationId": "ListarPorCliente",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDTO_MovimentacaoResponseDTO-Array_"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDTO_MovimentacaoResponseDTO-Array_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Movimentações"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "clienteId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/catalogo/coxinha": {
 			"get": {
 				"operationId": "ListaCoxinhas",
